# NexusMol

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
data/: ligands_list.csv
data/cleaned_mpro_receptors2/: 6lu7.cif  6m03.cif  6w63.cif  6w63_X77.sdf  6yb7.cif  6yb7_PEG.sdf  7bqy.cif  7k3t.cif  7k40.cif  7k40_U5G.sdf  7l10.cif  7l10_XEY.sdf
data/vina_meeko_prepped_test/: aspirin_prepped.mol2  mol10_prepped.mol2  mol11_prepped.mol2  mol12_prepped.mol2  mol13_prepped.mol2  mol14_prepped.mol2  mol15_prepped.mol2  mol16_prepped.mol2  mol17_prepped.mol2  mol1_prepped.mol2  mol2_prepped.mol2  mol3_prepped.mol2  mol5_prepped.mol2  mol6_prepped.mol2  mol7_prepped.mol2  mol8_prepped.mol2  mol9_prepped.mol2
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATA_FLOW.md  DEVELOPER_GUIDE.md  configuration.md  data_flow.md  developer_guide.md  validation.md
examples/: EXAMPLES.md  dock6_config.yaml  id_list.txt  ligand_list.csv  vina_config.yaml
examples/dock6_prepared_ligands/: mol1_prepared.mol2  mol2_prepared.mol2  mol3_prepared.mol2  mol4_prepared.mol2
examples/fetched_structures/: 6W63.cif  6W63_ligand.sdf  7K40.cif  7K40_ligand.sdf
examples/vina_prepared_ligands/: aspirin_prepared.pdbqt  mol1_prepared.pdbqt  mol2_prepared.pdbqt  mol3_prepared.pdbqt  (+1 more)
sample_configs/: default.yaml  dock6_validation.yaml  fetch_rcsb.yaml  prep_clean.yaml  sample_docking.yaml  sample_ligands.yaml  sample_validation.yaml  vina_validation.yaml
tests/: test_config.yaml  test_docking_config.py  test_ligands_prep.py
(+171 files in other folders)
