[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compdd"
version = "1.2.0"

[project.scripts]
compdd = "compdd.cli.main:main"
validate = "compdd.validation.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
compdd = ["**/*.txt", "**/*.com", "**/templates/*.py"]
