[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "1.5.2"
dependencies = ["rcsb-api"]

[project.scripts]
nexus = "nexus.cli.main:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus = ["**/*.txt", "**/*.com", "**/templates/*.py"]
