[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "2.3.0"

[tool.setuptools.package-data]
nexus = ["**/*.txt", "**/*.com", "**/templates/*.py", "**/*.ipynb"]

[project.scripts]
nexus = "nexus.cli.main:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
